--- a/package.json
+++ b/package.json
@@ -129,6 +129,7 @@
     "webpack": "3.10.0",
     "webpack-dev-server": "^2.11.2",
     "webpack-shell-plugin": "^0.5.0",
-    "yaml-front-matter": "^3.4.0"
+    "yaml-front-matter": "^3.4.0",
+    "yml-loader": "^2.1.0"
   }
 }
