--- a/.eslintrc
+++ b/.eslintrc
@@ -27,6 +27,13 @@
     "react/jsx-uses-vars": [1],      // avoid no-unused-vars for imports used as react components
     "react/jsx-uses-react": [1],     // avoid no-unused-vars for importing React
     "react/react-in-jsx-scope": [1], // make sure React is in scope when writing jsx
-    "no-var": ["error"]
+    "no-var": ["error"],
+    "jsx-a11y/label-has-for": [ 2, {
+      "components": [ "Label" ],
+      "required": {
+      "every": [ "nesting", "id" ]},
+      "allowChildren": true
+      }
+    ]
   }
 }
