--- a/package.json
+++ b/package.json
@@ -97,7 +97,7 @@
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^3.2.0",
     "ignore-styles": "^5.0.1",
-    "image-webpack-loader": "^4.2.0",
+    "imagemin-webpack-plugin": "^2.1.5",
     "isomorphic-style-loader": "^1.0.0",
     "jsdom": "^9.2.1",
     "json-loader": "^0.5.4",
