--- a/package.json
+++ b/package.json
@@ -51,8 +51,8 @@
     "re-reselect": "^0.5.0",
     "react": "15.3.0",
     "react-bootstrap": "^0.30.6",
-    "react-document-title": "^2.0.3",
     "react-dom": "15.3.0",
+    "react-helmet": "^5.2.0",
     "react-overlays": "^0.8.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.4.1",
