removed anchor plugin and added katex

--- a/package.json
+++ b/package.json
@@ -100,10 +100,10 @@
     "isomorphic-style-loader": "^1.0.0",
     "jsdom": "^9.2.1",
     "json-loader": "^0.5.4",
-    "markdown-it-anchor": "^2.5.0",
     "markdown-it-attrs": "^0.5.1",
     "markdown-it-header-sections": "^0.2.2",
     "markdown-it-implicit-figures": "^0.3.0",
+    "markdown-it-katex": "^2.0.3",
     "markdown-it-loader": "^0.6.0",
     "markdown-it-task-checkbox": "^1.0.6",
     "mocha": "^3.2.0",
