--- a/.eslintrc
+++ b/.eslintrc
@@ -5,7 +5,7 @@
     "es6": true,
     "mocha": true
   },
-  "extends": "eslint:recommended",
+  "extends": ["eslint:recommended", "plugin:jsx-a11y/recommended"],
   "parser": "babel-eslint",
   "parserOptions": {
     "ecmaVersion": 8,
@@ -15,7 +15,7 @@
     },
     "sourceType": "module"
   },
-  "plugins": ["react"],
+  "plugins": ["react", "jsx-a11y"],
   "rules": {
     "eol-last": ["error"],
     "indent": ["error", 2, {"SwitchCase": 1}],
@@ -27,6 +27,14 @@
     "react/jsx-uses-vars": [1],      // avoid no-unused-vars for imports used as react components
     "react/jsx-uses-react": [1],     // avoid no-unused-vars for importing React
     "react/react-in-jsx-scope": [1], // make sure React is in scope when writing jsx
-    "no-var": ["error"]
+    "no-var": ["error"],
+    "jsx-a11y/label-has-for": [ "error", {
+      "components": [ "Label" ],
+      "required": {
+        "every": [ "nesting", "id" ]
+      },
+      "allowChildren": true
+      }
+    ]
   }
 }
