--- a/package.json
+++ b/package.json
@@ -49,14 +49,14 @@
     "posthtml-render": "^1.0.6",
     "prop-types": "^15.6.0",
     "re-reselect": "^0.5.0",
-    "react": "15.3.0",
-    "react-bootstrap": "^0.30.6",
+    "react": "^16.4.1",
+    "react-bootstrap": "^0.31.1",
     "react-document-title": "^2.0.3",
-    "react-dom": "15.3.0",
-    "react-overlays": "^0.8.0",
+    "react-dom": "^16.4.1",
+    "react-overlays": "^0.8.3",
     "react-redux": "^4.4.9",
     "react-router": "^3.2.1",
-    "react-router-bootstrap": "^0.23.1",
+    "react-router-bootstrap": "^0.23.3",
     "react-router-scroll": "^0.4.4",
     "react-scroll-to-component": "^1.0.2",
     "redux": "^3.5.2",
@@ -98,7 +98,7 @@
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^3.2.0",
     "ignore-styles": "^5.0.1",
-    "isomorphic-style-loader": "^1.0.0",
+    "isomorphic-style-loader": "^4.0.0",
     "jsdom": "^9.2.1",
     "json-loader": "^0.5.4",
     "markdown-it-anchor": "^2.5.0",
@@ -117,7 +117,6 @@
     "postcss-loader": "^2.0.9",
     "puppeteer": "^0.10.2",
     "raw-loader": "^0.5.1",
-    "react-hot-loader": "^1.3.0",
     "resolve-url-loader": "^1.4.3",
     "sass-loader": "^6.0.6",
     "sitemap-webpack-plugin": "^0.3.0",
