--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     "compression": "^1.6.2",
     "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^1.0.8",
-    "css-loader": "^0.23.1",
+    "css-loader": "^0.28.11",
     "deep-freeze": "^0.0.1",
     "ejs-compiled-loader": "^1.1.0",
     "eslint": "^4.6.1",
@@ -110,13 +110,13 @@
     "mock-local-storage": "^1.0.2",
     "mock-require": "^2.0.2",
     "node-cleanup": "^2.1.2",
-    "node-sass": "4.7.2",
+    "node-sass": "^4.9.0",
     "node-spider": "^1.4.1",
     "node-static": "^0.7.9",
     "puppeteer": "^0.10.2",
     "raw-loader": "^0.5.1",
     "resolve-url-loader": "^1.4.3",
-    "sass-loader": "^6.0.6",
+    "sass-loader": "^7.0.3",
     "sitemap-webpack-plugin": "^0.3.0",
     "static-site-generator-webpack-plugin": "^3.4.1",
     "style-loader": "^0.13.1",
