--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "scratchblocks": "github:arve0/scratchblocks#68ebaf393c4be6193a339b9dd473ca01cfc7f7f1"
   },
   "devDependencies": {
+    "autoprefixer": "^8.6.3",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.9.1",
     "babel-eslint": "^8.2.3",
@@ -117,6 +118,7 @@
     "node-sass": "^4.9.0",
     "node-spider": "^1.4.1",
     "node-static": "^0.7.9",
+    "postcss-loader": "^2.1.5",
     "puppeteer": "^0.10.2",
     "raw-loader": "^0.5.1",
     "resolve-url-loader": "^1.4.3",
