--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "highlight.js": "^9.11.0",
     "history": "^2.1.2",
     "markdown-it": "^8.3.1",
+    "postcss-cssnext": "^3.1.0",
     "posthtml-parser": "^0.2.0",
     "posthtml-render": "^1.0.6",
     "prop-types": "^15.6.0",
@@ -59,6 +60,8 @@
     "react-router-bootstrap": "^0.23.3",
     "react-router-scroll": "^0.4.4",
     "react-scroll-to-component": "^1.0.2",
+    "react-toolbox": "^2.0.0-beta.13",
+    "react-transition-group": "^2.3.1",
     "redux": "^3.5.2",
     "reselect": "^2.5.1",
     "scratchblocks": "github:arve0/scratchblocks#68ebaf393c4be6193a339b9dd473ca01cfc7f7f1"
