--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     ]
   },
   "dependencies": {
+    "@material-ui/core": "^1.3.0",
     "classnames": "^2.2.5",
     "highlight.js": "^9.11.0",
     "history": "^2.1.2",
