--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build:analyse:": "webpack --progress --profile --json > stats.json",
     "build:travis": "webpack -p --env.NODE_ENV=production",
     "serve": "node server.js",
-    "test": "mocha --compilers js:babel-core/register --require mock-local-storage --require ignore-styles --require ./test/test_helper.js \"test/**/*@(.js|.jsx)\"",
+    "test": "mocha \"test/**/*@(.js|.jsx)\"",
     "test:links": "node test-links.js",
     "test:watch": "yarn test -- --watch",
     "eslint": "eslint *.js src/ test/ --ext .js,.jsx",
