--- a/package.json
+++ b/package.json
@@ -64,38 +64,36 @@
     "scratchblocks": "github:arve0/scratchblocks#68ebaf393c4be6193a339b9dd473ca01cfc7f7f1"
   },
   "devDependencies": {
-    "autoprefixer": "^6.7.2",
+    "autoprefixer": "^9.0.1",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.9.1",
     "babel-eslint": "^8.2.3",
-    "babel-loader": "^7.1.2",
+    "babel-loader": "^7.1.5",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-2": "^6.5.0",
     "bootstrap-loader": "^2.2.0",
     "bootstrap-sass": "^3.3.6",
-    "bundle-loader": "^0.5.4",
-    "case-sensitive-paths-webpack-plugin": "^1.1.2",
+    "case-sensitive-paths-webpack-plugin": "^2.1.2",
     "chai": "^3.5.0",
     "clean-webpack-plugin": "^0.1.19",
     "combine-loader": "^0.2.0",
     "compression": "^1.6.2",
-    "copy-webpack-plugin": "^4.0.1",
-    "cross-env": "^1.0.8",
-    "css-loader": "^0.23.1",
+    "copy-webpack-plugin": "^4.5.2",
+    "css-loader": "^0.28.11",
     "deep-freeze": "^0.0.1",
     "ejs-compiled-loader": "^1.1.0",
-    "eslint": "^4.6.1",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.3.0",
+    "eslint": "^5.2.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.10.0",
     "express": "^4.16.3",
     "extract-text-webpack-plugin": "^3.0.2",
     "favicons-webpack-plugin": "^0.0.9",
-    "file-loader": "^0.8.5",
+    "file-loader": "^1.1.11",
     "front-matter-loader": "^0.2.0",
     "fs-extra": "4.0.2",
     "glob": "^7.0.3",
-    "html-loader": "^0.4.3",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "ignore-styles": "^5.0.1",
     "isomorphic-style-loader": "^4.0.0",
@@ -110,14 +108,14 @@
     "mock-local-storage": "^1.0.2",
     "mock-require": "^2.0.2",
     "node-cleanup": "^2.1.2",
-    "node-sass": "4.7.2",
+    "node-sass": "^4.9.2",
     "node-spider": "^1.4.1",
     "node-static": "^0.7.9",
     "postcss-loader": "^2.0.9",
     "puppeteer": "^0.10.2",
     "raw-loader": "^0.5.1",
     "resolve-url-loader": "^1.4.3",
-    "sass-loader": "^6.0.6",
+    "sass-loader": "^7.0.3",
     "sitemap-webpack-plugin": "^0.3.0",
     "static-site-generator-webpack-plugin": "^3.4.1",
     "style-loader": "^0.13.1",
