--- a/.stylelintrc
+++ b/.stylelintrc
@@ -22,6 +22,7 @@
     "media-feature-name-no-vendor-prefix": true,
     "property-no-vendor-prefix": true,
     "selector-no-vendor-prefix": true,
-    "value-no-vendor-prefix": true
+    "value-no-vendor-prefix": true,
+    "no-descending-specificity": null
   }
 }
