--- a/package.json
+++ b/package.json
@@ -87,8 +87,7 @@
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.10.0",
     "express": "^4.16.3",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "favicons-webpack-plugin": "^0.0.9",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
     "front-matter-loader": "^0.2.0",
     "fs-extra": "4.0.2",
@@ -116,15 +115,16 @@
     "raw-loader": "^0.5.1",
     "resolve-url-loader": "^2.3.0",
     "sass-loader": "^7.0.3",
-    "sitemap-webpack-plugin": "^0.3.0",
+    "sitemap-webpack-plugin": "^0.6.0",
     "static-site-generator-webpack-plugin": "^3.4.1",
     "style-loader": "^0.21.0",
     "stylelint": "^9.3.0",
     "stylelint-config-css-modules": "^1.3.0",
     "stylelint-config-standard": "^18.2.0",
     "url-loader": "^0.5.7",
-    "webpack": "3.10.0",
-    "webpack-dev-server": "^2.11.2",
+    "webpack": "^4.16.2",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.5",
     "webpack-shell-plugin": "^0.5.0",
     "yaml-front-matter": "^4.0.0",
     "yamljs": "^0.3.0",
