--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "start": "webpack-dev-server -d --progress --inline --hot --history-api-fallback --host 0.0.0.0",
     "build:debug": "webpack -d --progress --env.verbose",
-    "build": "webpack --progress",
-    "build:prod": "webpack -p --progress --env.NODE_ENV=production --env.BUILD_PDF",
-    "build:analyse:": "webpack --progress --profile --json > stats.json",
-    "build:travis": "webpack -p --env.NODE_ENV=production",
+    "build": "webpack --progress --mode=none",
+    "build:prod": "webpack -p --progress --env.NODE_ENV=production --env.BUILD_PDF --mode=none",
+    "build:analyse:": "webpack --progress --profile --json > stats.json --mode=none",
+    "build:travis": "webpack -p --env.NODE_ENV=production --mode=none",
     "serve": "node server.js",
     "test": "mocha --compilers js:babel-core/register --require mock-local-storage --require ignore-styles --require ./test/test_helper.js \"test/**/*@(.js|.jsx)\"",
     "test:links": "node test-links.js",
