--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "eslint-plugin-react": "^7.3.0",
     "express": "^4.16.3",
     "extract-text-webpack-plugin": "^3.0.2",
+    "favicons-webpack-plugin": "^0.0.9",
     "file-loader": "^0.8.5",
     "front-matter-loader": "^0.2.0",
     "fs-extra": "4.0.2",
