--- a/package.json
+++ b/package.json
@@ -51,8 +51,8 @@
     "re-reselect": "^0.5.0",
     "react": "^16.4.1",
     "react-bootstrap": "^0.31.1",
-    "react-document-title": "^2.0.3",
     "react-dom": "^16.4.1",
+    "react-helmet": "^5.2.0",
     "react-overlays": "^0.8.3",
     "react-redux": "^4.4.9",
     "react-router": "^3.2.1",
