small fix for build:prod

--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "start": "webpack-dev-server -d --progress --inline --hot --host 0.0.0.0",
     "build:debug": "webpack -d --progress --env.verbose",
     "build": "webpack --progress --mode=none",
-    "build:prod": "webpack -p --progress --env.NODE_ENV=production --env.BUILD_PDF --mode=none",
+    "build:prod": "webpack -p --progress --env.NODE_ENV=production --env.BUILD_PDF",
     "build:analyse:": "webpack --progress --profile --json > stats.json --mode=none",
-    "build:travis": "webpack -p --env.NODE_ENV=production --mode=none",
+    "build:travis": "webpack -p --env.NODE_ENV=production",
     "serve": "node server.js",
     "test": "mocha \"test/**/*@(.js|.jsx)\"",
     "test:links": "node test-links.js",
