--- a/package.json
+++ b/package.json
@@ -41,9 +41,7 @@
     ]
   },
   "dependencies": {
-    "canvas": "^1.6.11",
     "fast-memoize": "^2.3.2",
-    "highlight.js": "^9.11.0",
     "history": "^2.1.2",
     "markdown-it": "^8.3.1",
     "posthtml-parser": "^0.2.0",
@@ -61,8 +59,7 @@
     "react-router-scroll": "^0.4.4",
     "react-scroll-to-component": "^1.0.2",
     "redux": "^3.5.2",
-    "reselect": "^2.5.1",
-    "scratchblocks": "^3.1.2"
+    "reselect": "^2.5.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
@@ -96,6 +93,7 @@
     "front-matter-loader": "^0.2.0",
     "fs-extra": "4.0.2",
     "glob": "^7.0.3",
+    "highlight.js": "^9.12.0",
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^3.2.0",
     "ignore-styles": "^5.0.1",
