--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
     "node-sass": "4.7.2",
     "node-spider": "^1.4.1",
     "node-static": "^0.7.9",
+    "p-queue": "^2.4.2",
     "postcss-loader": "^2.0.9",
     "puppeteer": "^0.10.2",
     "raw-loader": "^0.5.1",
