--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "react-scroll-to-component": "^1.0.2",
     "redux": "^3.5.2",
     "reselect": "^2.5.1",
-    "scratchblocks": "https://github.com/Skagevang/scratchblocks"
+    "scratchblocks": "github:Skagevang/scratchblocks#c36ce1df0d00a33ea07c5ca195f9403ee493136b"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
