--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ stages:
     if: branch = master AND type = push # AND fork = false
 
 before_install:
-  - git clone --depth 1 --branch master https://github.com/kodeklubben/oppgaver.git ../oppgaver
+  - git clone --depth=1 --branch=master https://github.com/kodeklubben/oppgaver.git ../oppgaver
 cache: yarn
 script:
   - yarn eslint
