--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-helmet": "^5.2.0",
     "react-overlays": "^0.8.3",
     "react-redux": "^4.4.9",
+    "react-render-html": "^0.6.0",
     "react-router": "^3.2.1",
     "react-router-bootstrap": "^0.23.3",
     "react-router-scroll": "^0.4.4",
