Since Webpack 2+ returns exit codes on error, we don't need travis_build.sh anymore

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ script:
   - yarn eslint
   - yarn stylelint
   - yarn test
-  - ./travis_build.sh
+  - yarn build:travis
 deploy:
   provider: pages
   github-token: $GITHUB_TOKEN
