--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "webpack --progress",
     "build:prod": "webpack -p --progress --env.NODE_ENV=production --env.BUILD_PDF",
     "build:analyse:": "webpack --progress --profile --json > stats.json",
-    "build:travis": "webpack -p --env.NODE_ENV=production",
+    "build:travis": "webpack -p --env.NODE_ENV=production --env.BUILD_PDF",
     "serve": "node server.js",
     "test": "mocha \"test/**/*@(.js|.jsx)\"",
     "test:links": "node test-links.js",
@@ -117,7 +117,7 @@
     "node-static": "^0.7.9",
     "p-queue": "^2.4.2",
     "postcss-loader": "^2.0.9",
-    "puppeteer": "^1.6.1",
+    "puppeteer": "^1.7.0",
     "raw-loader": "^0.5.1",
     "resolve-url-loader": "^1.4.3",
     "sass-loader": "^6.0.6",
