--- a/.eslintrc
+++ b/.eslintrc
@@ -15,17 +15,24 @@
     },
     "sourceType": "module"
   },
-  "plugins": ["react", "jsx-a11y"],
+  "plugins": [
+    "react",
+    "jsx-a11y",
+    "babel"
+  ],
   "rules": {
+    "babel/semi": "warn",
     "eol-last": ["error"],
     "indent": ["error", 2, {"SwitchCase": 1}],
     "quotes": ["error", "single", {"avoidEscape": true, "allowTemplateLiterals": true}],
     "semi": ["error", "always"],
+    "no-extra-semi": "error",
+    "semi-spacing": "error",
     "max-len": ["error", 120],
     "no-console": ["off"], // we automatically strip console.log from production code, and we want to keep console.warn and console.error
     "no-unused-vars": ["error", { "vars": "all", "args": "none" }], // only warn of unused args and vars
-    "react/jsx-uses-vars": [1],      // avoid no-unused-vars for imports used as react components
-    "react/jsx-uses-react": [1],     // avoid no-unused-vars for importing React
+    "react/jsx-uses-vars": ["warn"],      // avoid no-unused-vars for imports used as react components
+    "react/jsx-uses-react": ["warn"],     // avoid no-unused-vars for importing React
     "react/jsx-no-bind": ["error"],
     "react/react-in-jsx-scope": [1], // make sure React is in scope when writing jsx
     "no-var": ["error"],
