--- a/package.json
+++ b/package.json
@@ -86,9 +86,10 @@
     "css-loader": "^0.23.1",
     "deep-freeze": "^0.0.1",
     "ejs-compiled-loader": "^1.1.0",
-    "eslint": "^4.6.1",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.3.0",
+    "eslint": "^5.4.0",
+    "eslint-plugin-babel": "^5.1.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.11.1",
     "express": "^4.16.3",
     "extract-text-webpack-plugin": "^3.0.2",
     "favicons-webpack-plugin": "^0.0.9",
