--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "react-switch": "^3.0.4",
     "redux": "^3.5.2",
     "reselect": "^2.5.1",
-    "scratchblocks": "github:Skagevang/scratchblocks#c36ce1df0d00a33ea07c5ca195f9403ee493136b"
+    "scratchblocks": "https://github.com/scratchblocks/scratchblocks.git#5854607e6e6077199b17f7b270f34504de77582a"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
