--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "start": "webpack-dev-server -d --progress --inline --hot --host 0.0.0.0",
     "build:debug": "webpack -d --progress --env.verbose",
-    "build": "webpack --progress --mode=none",
+    "build": "webpack --progress",
     "build:prod": "webpack -p --progress --env.NODE_ENV=production --env.BUILD_PDF",
-    "build:analyse:": "webpack --progress --profile --json > stats.json --mode=none",
+    "build:analyse:": "webpack --progress --profile --json > stats.json",
     "build:travis": "webpack -p --env.NODE_ENV=production",
     "serve": "node server.js",
     "test": "mocha \"test/**/*@(.js|.jsx)\"",
@@ -65,7 +65,7 @@
     "scratchblocks": "github:Skagevang/scratchblocks#c36ce1df0d00a33ea07c5ca195f9403ee493136b"
   },
   "devDependencies": {
-    "autoprefixer": "^9.0.1",
+    "autoprefixer": "^9.6.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.9.1",
     "babel-eslint": "^8.2.3",
@@ -78,7 +78,7 @@
     "case-sensitive-paths-webpack-plugin": "^2.1.2",
     "chai": "^3.5.0",
     "clean-webpack-plugin": "^0.1.19",
-    "combine-loader": "^0.2.0",
+    "combine-loader": "^0.4.0",
     "compression": "^1.6.2",
     "copy-webpack-plugin": "^4.5.2",
     "css-loader": "^1.0.0",
@@ -89,7 +89,7 @@
     "eslint-plugin-react": "^7.10.0",
     "express": "^4.16.3",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "file-loader": "^1.1.11",
+    "file-loader": "^4.0.0",
     "front-matter-loader": "^0.2.0",
     "fs-extra": "4.0.2",
     "glob": "^7.0.3",
@@ -115,7 +115,7 @@
     "p-queue": "^2.4.2",
     "postcss-loader": "^2.1.6",
     "puppeteer": "^1.6.1",
-    "raw-loader": "^0.5.1",
+    "raw-loader": "^3.0.0",
     "resolve-url-loader": "^2.3.0",
     "sass-loader": "^7.0.3",
     "sitemap-webpack-plugin": "^0.6.0",
@@ -124,10 +124,10 @@
     "stylelint": "^9.3.0",
     "stylelint-config-css-modules": "^1.3.0",
     "stylelint-config-standard": "^18.2.0",
-    "url-loader": "^1.0.1",
-    "webpack": "^4.16.2",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.5",
+    "url-loader": "^2.0.0",
+    "webpack": "^4.33.0",
+    "webpack-cli": "^3.3.3",
+    "webpack-dev-server": "^3.7.1",
     "webpack-shell-plugin": "^0.5.0",
     "yaml-front-matter": "^4.0.0",
     "yamljs": "^0.3.0",
