--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "compression": "^1.6.2",
     "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^1.0.8",
+    "cross-spawn": "^6.0.5",
     "css-loader": "^0.23.1",
     "deep-freeze": "^0.0.1",
     "ejs-compiled-loader": "^1.1.0",
