--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server -d --progress --inline --hot --host 0.0.0.0",
-    "build:debug": "webpack -d --progress --env.verbose",
-    "build": "webpack --progress",
-    "build:prod": "webpack -p --progress --env.BUILD_PDF",
+    "build:debug": "webpack --mode=development -d --progress --env.verbose",
+    "build": "webpack --mode=development --progress",
+    "build:prod": "webpack --mode=production -p --progress --env.BUILD_PDF",
     "build:analyse:": "webpack --progress --profile --json > stats.json",
-    "build:travis": "webpack -p --env.BUILD_PDF",
+    "build:travis": "webpack --mode=production -p --env.BUILD_PDF",
     "serve": "node server.js",
     "test": "mocha \"test/**/*@(.js|.jsx)\"",
     "test:links": "node test-links.js",
