--- a/package.json
+++ b/package.json
@@ -126,10 +126,10 @@
     "stylelint-config-css-modules": "^1.3.0",
     "stylelint-config-standard": "^18.2.0",
     "url-loader": "^2.0.0",
+    "webapp-webpack-plugin": "^2.7.1",
     "webpack": "^4.33.0",
     "webpack-cli": "^3.3.3",
     "webpack-dev-server": "^3.7.1",
-    "webpack-pwa-manifest": "^4.0.0",
     "webpack-shell-plugin": "^0.5.0",
     "yaml-front-matter": "^4.0.0",
     "yamljs": "^0.3.0",
