--- a/package.json
+++ b/package.json
@@ -130,7 +130,7 @@
     "webpack": "^4.33.0",
     "webpack-cli": "^3.3.3",
     "webpack-dev-server": "^3.7.1",
-    "webpack-shell-plugin": "^0.5.0",
+    "webpack-shell-plugin-alt": "^1.3.0",
     "yaml-front-matter": "^4.0.0",
     "yamljs": "^0.3.0",
     "yml-loader": "^2.1.0"
