--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build:debug": "webpack --mode=development -d --progress --env.verbose",
     "build": "webpack --mode=development --progress",
     "build:prod": "webpack --mode=production -p --progress --env.BUILD_PDF",
-    "build:analyse:": "webpack --progress --profile --json > stats.json",
+    "build:analyse": "webpack --mode=production --progress --profile --json > stats.json",
     "build:travis": "webpack --mode=production -p --env.BUILD_PDF",
     "serve": "node server.js",
     "test": "mocha \"test/**/*@(.js|.jsx)\"",
