add eslint rule and some new function components

--- a/.eslintrc
+++ b/.eslintrc
@@ -17,6 +17,7 @@
   },
   "plugins": [
     "react",
+    "react-hooks",
     "jsx-a11y",
     "babel"
   ],
@@ -29,6 +30,8 @@
     "max-len": ["error", 120],
     "no-console": ["off"], // we automatically strip console.log from production code, and we want to keep console.warn and console.error
     "no-unused-vars": ["error", { "vars": "all", "args": "none" }], // only warn of unused args and vars
+    "react-hooks/rules-of-hooks": "error",
+    "react-hooks/exhaustive-deps": "warn",
     "react/jsx-uses-vars": ["warn"],      // avoid no-unused-vars for imports used as react components
     "react/jsx-uses-react": ["warn"],     // avoid no-unused-vars for importing React
     "react/jsx-no-bind": ["error"],
