--- a/package.json
+++ b/package.json
@@ -33,13 +33,6 @@
     "url": "https://github.com/NorwegianKiwi/codeclub-viewer/issues"
   },
   "homepage": "https://github.com/NorwegianKiwi/codeclub-viewer#readme",
-  "babel": {
-    "presets": [
-      "es2015",
-      "react",
-      "stage-2"
-    ]
-  },
   "dependencies": {
     "fast-memoize": "^2.3.2",
     "highlight.js": "^9.11.0",
@@ -65,14 +58,14 @@
     "scratchblocks": "github:tjesi/scratchblocks#d4290bd3700de57e9746c6d56fc0bdce82f70c6c"
   },
   "devDependencies": {
+    "@babel/core": "^7.5.5",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.5.5",
     "autoprefixer": "^9.6.0",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.9.1",
-    "babel-eslint": "^8.2.3",
-    "babel-loader": "^7.1.5",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-2": "^6.5.0",
+    "babel-eslint": "^10.0.3",
+    "babel-loader": "^8.0.6",
     "bootstrap-loader": "^2.2.0",
     "bootstrap-sass": "^3.3.6",
     "case-sensitive-paths-webpack-plugin": "^2.1.2",
@@ -85,7 +78,7 @@
     "deep-freeze": "^0.0.1",
     "ejs-compiled-loader": "^1.1.0",
     "eslint": "^4.6.1",
-    "eslint-plugin-babel": "^5.1.0",
+    "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.11.1",
     "express": "^4.16.3",
@@ -107,7 +100,7 @@
     "markdown-it-katex": "^2.0.3",
     "markdown-it-loader": "^0.6.0",
     "markdown-it-task-checkbox": "^1.0.6",
-    "mocha": "^3.2.0",
+    "mocha": "^6.2.0",
     "mock-local-storage": "^1.0.2",
     "mock-require": "^2.0.2",
     "node-cleanup": "^2.1.2",
