--- a/.eslintrc
+++ b/.eslintrc
@@ -31,10 +31,10 @@
     "no-console": ["off"], // we automatically strip console.log from production code, and we want to keep console.warn and console.error
     "no-unused-vars": ["error", { "vars": "all", "args": "none" }], // only warn of unused args and vars
     "react-hooks/rules-of-hooks": "error",
-    "react-hooks/exhaustive-deps": "warn",
+    "react-hooks/exhaustive-deps": "error",
     "react/jsx-uses-vars": ["warn"],      // avoid no-unused-vars for imports used as react components
     "react/jsx-uses-react": ["warn"],     // avoid no-unused-vars for importing React
-    "react/jsx-no-bind": ["error"],
+    "react/jsx-no-bind": ["error", {"allowArrowFunctions": true}],
     "react/react-in-jsx-scope": ["warn"], // make sure React is in scope when writing jsx
     "no-var": ["error"],
     "jsx-a11y/label-has-for": [ "error", {
