--- a/.eslintrc
+++ b/.eslintrc
@@ -17,6 +17,7 @@
   },
   "plugins": [
     "react",
+    "react-hooks",
     "jsx-a11y",
     "babel"
   ],
@@ -29,9 +30,11 @@
     "max-len": ["error", 120],
     "no-console": ["off"], // we automatically strip console.log from production code, and we want to keep console.warn and console.error
     "no-unused-vars": ["error", { "vars": "all", "args": "none" }], // only warn of unused args and vars
+    "react-hooks/rules-of-hooks": "error",
+    "react-hooks/exhaustive-deps": "error",
     "react/jsx-uses-vars": ["warn"],      // avoid no-unused-vars for imports used as react components
     "react/jsx-uses-react": ["warn"],     // avoid no-unused-vars for importing React
-    "react/jsx-no-bind": ["error"],
+    "react/jsx-no-bind": ["error", {"allowArrowFunctions": true}], // See https://stackoverflow.com/a/53177820
     "react/react-in-jsx-scope": ["warn"], // make sure React is in scope when writing jsx
     "no-var": ["error"],
     "jsx-a11y/label-has-for": [ "error", {
