--- a/package.json
+++ b/package.json
@@ -54,7 +54,6 @@
     "react-redux": "^4.4.9",
     "react-router": "^3.2.1",
     "react-router-bootstrap": "^0.23.3",
-    "react-router-scroll": "^0.4.4",
     "react-scroll-to-component": "^1.0.2",
     "react-switch": "^3.0.4",
     "redux": "^3.5.2",
@@ -85,6 +84,7 @@
     "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.11.1",
+    "eslint-plugin-react-hooks": "^2.1.1",
     "express": "^4.16.3",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^4.0.0",
@@ -94,7 +94,7 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "ignore-styles": "^5.0.1",
-    "isomorphic-style-loader": "^4.0.0",
+    "isomorphic-style-loader": "^5.1.0",
     "jsdom": "^9.2.1",
     "json-loader": "^0.5.4",
     "markdown-it-attrs": "^0.5.1",
