--- a/package.json
+++ b/package.json
@@ -51,9 +51,9 @@
     "react-dom": "^16.8.0",
     "react-helmet": "^5.2.0",
     "react-overlays": "^0.8.3",
-    "react-redux": "^4.4.9",
-    "react-router": "^3.2.1",
-    "react-router-bootstrap": "^0.23.3",
+    "react-redux": "^7.1.1",
+    "react-router-bootstrap": "^0.25.0",
+    "react-router-dom": "^5.1.2",
     "react-scroll-to-component": "^1.0.2",
     "react-switch": "^3.0.4",
     "redux": "^3.5.2",
