fix pdf and travis

--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "test:links": "node test-links.js",
     "test:watch": "yarn test -- --watch",
     "eslint": "eslint *.js src/ test/ --ext .js,.jsx",
-    "stylelint": "stylelint \"src/**/*.scss\"",
-    "testall": "yarn eslint && yarn stylelint && yarn test"
+    "testall": "yarn eslint && yarn test"
   },
   "repository": {
     "type": "git",
