--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,24 @@
 language: node_js
+stages:
+  - name: deploy
+    if: branch = beta AND type = push AND fork = false
+
 before_install:
-  - git clone --depth=50 https://github.com/kodeklubben/oppgaver.git ../oppgaver
+  - git clone --depth=1 --branch=master https://github.com/kodeklubben/oppgaver.git ../oppgaver
 cache: yarn
 script:
   - yarn eslint
+  - yarn stylelint
   - yarn test
   - yarn build:travis
+deploy:
+  provider: pages
+  github-token: $GITHUB_TOKEN
+  skip-cleanup: true
+  keep-history: true
+  local-dir: dist
+  repo: repo:kodeklubben/beta
+  target-branch: gh-pages
+  fqdn: oppgaver.kidsakoder.no
+  on:
+    branch: beta
