--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "start": "webpack-dev-server -d --progress --inline --hot --host 0.0.0.0",
     "build:debug": "webpack --mode=development -d --progress --env.verbose",
     "build": "webpack --mode=development --progress",
-    "build:prod": "webpack --mode=production -p --progress --env.BUILD_PDF",
+    "build:prod": "webpack --mode=production -p --progress",
     "build:analyse": "webpack --mode=production --progress --profile --json > stats.json",
-    "build:travis": "webpack --mode=production -p --env.BUILD_PDF",
+    "build:travis": "webpack --mode=production -p",
     "serve": "node server.js",
     "test": "mocha \"test/**/*@(.js|.jsx)\"",
     "test:links": "node test-links.js",
@@ -114,7 +114,6 @@
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.8.2",
-    "webpack-shell-plugin-alt": "^1.4.0",
     "yaml-front-matter": "^4.0.0",
     "yamljs": "^0.3.0",
     "yml-loader": "^2.1.0"
