--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ stages:
 
 before_install:
   - git clone --depth=1 --branch=master https://github.com/kodeklubben/oppgaver.git ../oppgaver
+install:
+  - git config --add diff.renamelimit 9999
 cache: yarn
 script:
   - yarn eslint
