external pdf builder (#664)
* fix pdf

* run pdf external

* remve packages

--- a/package.json
+++ b/package.json
@@ -7,12 +7,11 @@
     "start": "webpack-dev-server -d --progress --inline --hot --host 0.0.0.0",
     "build:debug": "webpack --mode=development -d --progress --env.verbose",
     "build": "webpack --mode=development --progress",
-    "build:prod": "webpack --mode=production -p --progress --env.BUILD_PDF",
+    "build:prod": "webpack --mode=production -p --progress",
     "build:analyse": "webpack --mode=production --progress --profile --json > stats.json",
-    "build:travis": "webpack --mode=production -p --env.BUILD_PDF",
+    "build:travis": "webpack --mode=production -p",
     "serve": "node server.js",
     "test": "mocha \"test/**/*@(.js|.jsx)\"",
-    "test:links": "node test-links.js",
     "test:watch": "yarn test -- --watch",
     "eslint": "eslint *.js src/ test/ --ext .js,.jsx",
     "testall": "yarn eslint && yarn test"
@@ -85,7 +84,6 @@
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^4.2.0",
     "front-matter-loader": "^0.2.0",
-    "fs-extra": "4.0.2",
     "glob": "^7.1.4",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
@@ -101,12 +99,9 @@
     "mocha": "^6.2.1",
     "mock-local-storage": "^1.1.8",
     "mock-require": "^3.0.3",
-    "node-cleanup": "^2.1.2",
     "node-sass": "^4.12.0",
     "node-spider": "^1.4.1",
     "node-static": "^0.7.11",
-    "p-queue": "^2.4.2",
-    "puppeteer": "^1.20.0",
     "raw-loader": "^3.1.0",
     "sitemap-webpack-plugin": "^0.6.0",
     "static-site-generator-webpack-plugin": "^3.4.2",
@@ -114,7 +109,6 @@
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.8.2",
-    "webpack-shell-plugin-alt": "^1.4.0",
     "yaml-front-matter": "^4.0.0",
     "yamljs": "^0.3.0",
     "yml-loader": "^2.1.0"
