--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,28 @@
 language: node_js
+
 stages:
   - name: deploy
     if: branch = master AND type = push AND fork = false
 
 before_install:
   - git clone --depth=1 --branch=master https://github.com/kodeklubben/oppgaver.git ../oppgaver
+
 cache: yarn
+
 script:
   - yarn eslint
   - yarn stylelint
   - yarn test
   - yarn build:travis
+
 deploy:
-  provider: pages
-  github-token: $GITHUB_TOKEN
-  skip-cleanup: true
-  keep-history: true
-  local-dir: dist
+  provider: pages # github pages
+  github_token: $GITHUB_TOKEN_MASTER_NORWEGIANKIWI # Defined in github, added as travis env variable
+  skip_cleanup: true # Don't delete artifacts created during build
+  keep_history: true # Don't allow force push
+  local_dir: dist
   repo: kodeklubben/kodeklubben.github.io
-  target-branch: master
-  fqdn: oppgaver.kidsakoder.no
+  target_branch: master
+  fqdn: oppgaver.kidsakoder.no #CNAME
   on:
     branch: master
