--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "mock-local-storage": "^1.1.8",
     "mock-require": "^3.0.3",
     "raw-loader": "^3.1.0",
+    "serviceworker-webpack-plugin": "^1.0.1",
     "sitemap-webpack-plugin": "^0.6.0",
     "static-site-generator-webpack-plugin": "^3.4.2",
     "webapp-webpack-plugin": "^2.7.1",
