--- a/package.json
+++ b/package.json
@@ -48,8 +48,7 @@
     "re-reselect": "^3.4.0",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
-    "react-helmet": "^5.2.1",
-    "react-overlays": "^0.8.3",
+    "react-helmet-async": "^1.0.4",
     "react-redux": "^7.1.1",
     "react-router": "^3.2.4",
     "react-scroll-to-component": "^1.0.2",
