--- a/package.json
+++ b/package.json
@@ -96,13 +96,14 @@
     "mock-local-storage": "^1.1.11",
     "mock-require": "^3.0.3",
     "raw-loader": "^3.1.0",
-    "serviceworker-webpack-plugin": "^1.0.1",
     "sitemap-webpack-plugin": "^0.6.0",
     "static-site-generator-webpack-plugin": "^3.4.2",
     "webapp-webpack-plugin": "^2.7.1",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.8.2",
+    "workbox-webpack-plugin": "^4.3.1",
+    "workbox-window": "^4.3.1",
     "yaml-front-matter": "^4.0.0",
     "yamljs": "^0.3.0",
     "yml-loader": "^2.1.0"
