--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ script:
 deploy:
   provider: pages # github pages
   github_token: $GITHUB_TOKEN_MASTER_NORWEGIANKIWI # Defined in github, added as travis env variable
-  skip_cleanup: true # Don't delete artifacts created during build
+  cleanup: true # Don't delete artifacts created during build
   keep_history: true # Don't allow force push
   local_dir: dist
   repo: kodeklubben/kodeklubben.github.io
