--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "highlight.js": "^10.4.1",
     "history": "^2.1.2",
     "markdown-it": "^10.0.0",
+    "markdown-it-container": "^3.0.0",
+    "markdown-it-emoji": "^2.0.0",
     "posthtml-parser": "^0.4.1",
     "posthtml-render": "^1.1.5",
     "prop-types": "^15.7.2",
