--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -2,9 +2,7 @@ name: Codeclub-viewer
 on:
   push:
     branches: [master]
-  pull_request:
-    branches: [master]
-    
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -25,12 +23,12 @@ jobs:
         if: steps.cache-node-modules.outputs.cache-hit != 'true'
         run: yarn install
       - name: Run tests
-        run: | 
+        run: |
           yarn eslint
           yarn stylelint
           yarn test
       - name: Build
-        run: yarn build
+        run: yarn build:travis
       - name: Caching Dist Folder
         uses: actions/cache@v2
         with:
@@ -53,5 +51,6 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           deploy_key: ${{ secrets.DEPLOYKEY }}
+          publish_branch: master
           publish_dir: ./dist
           external_repository: sagatun/sagatun.github.io
