--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -50,7 +50,7 @@ jobs:
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
-          deploy_key: ${{ secrets.DEPLOYKEY }}
+          deploy_key: ${{ secrets.MANGO }}
           publish_branch: master
           publish_dir: ./dist
           external_repository: sagatun/sagatun.github.io
