--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -9,12 +9,12 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
+        with:
+          node-version: '10.16.0'
       - name: Clone exercises
         run: git clone --depth=1 --branch=master https://github.com/kodeklubben/oppgaver.git ../oppgaver
       - name: Install Dependencies
-        run: |
-          nvm install
-          yarn install
+        run: yarn install
       - name: Run tests
         run: |
           yarn eslint
