--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -10,9 +10,9 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: '10.16.0'
+          node-version: '10'
       - name: Clone exercises
-        run: git clone --depth=1 --branch=master https://github.com/kodeklubben/oppgaver.git ../oppgaver
+        run: git clone --depth=1 --branch=master https://github.com/sagatun/oppgaver ../oppgaver
       - name: Install Dependencies
         run: yarn install
       - name: Run tests
