--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -3,9 +3,6 @@ on:
   push:
     branches:
       - '*'
-  pull_request:
-    branches:
-      - master
 
 jobs:
   build:
@@ -39,22 +36,28 @@ jobs:
           path: ./dist
           key: cache-dist-${{ github.sha }}
 
-  deploy:
-    needs: build
-    name: GitPages Deploy
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v2
-      - name: Restoring Dist Folder
-        uses: actions/cache@v2
-        with:
-          path: ./dist
-          key: cache-dist-${{ github.sha }}
-      - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          deploy_key: ${{ secrets.MANGO }}
-          publish_branch: master
-          publish_dir: ./dist
-          external_repository: sagatun/sagatun.github.io
+on:
+  pull_request:
+    branches:
+      - 'master'
+      
+  jobs:
+    deploy:
+      needs: build
+      name: GitPages Deploy
+      runs-on: ubuntu-latest
+      steps:
+        - name: Checkout Code
+          uses: actions/checkout@v2
+        - name: Restoring Dist Folder
+          uses: actions/cache@v2
+          with:
+            path: ./dist
+            key: cache-dist-${{ github.sha }}
+        - name: Deploy
+          uses: peaceiris/actions-gh-pages@v3
+          with:
+            deploy_key: ${{ secrets.MANGO }}
+            publish_branch: master
+            publish_dir: ./dist
+            external_repository: sagatun/sagatun.github.io
