--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -1,9 +1,16 @@
 name: Codeclub-viewer
 
 on:
+  push:
+    branches:
+      - '*'
   pull_request:
     branches:
-      - master
+      - main
+
+concurrency:
+  group: ${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   build:
