--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -3,14 +3,10 @@ name: Codeclub-viewer
 on:
   push:
     branches:
-      - '*'
+      - master
   pull_request:
     branches:
       - master
-
-concurrency:
-  group: ${{ github.ref }}
-  cancel-in-progress: true
 
 jobs:
   build:
